src/style/_mixins.scss
@import "variables";


@mixin exit-popup-btn-mobile{
  border-radius: 30px;
  padding: 15px 30px;
  color: white;
  background-color: black;
  position: fixed;
  z-index: 1;
  left: 50%;
  transform: translate(-50%, 0%);
  bottom: 20px;
}

@mixin freeze-submenu-bar{
  position: fixed !important;
  margin-top: 0 !important;
  top: 0 !important;
  z-index: 1;
}

@mixin submenu-bar{
  width: 100%;
  padding: 8px 10px;
  background-color: white;
  position: relative;
  margin-top: 65px;
  .selected-item{
    background-color: lightgray;
    padding: 10px 20px;
    display: inline-block;
    position: relative;
    width: 100%;
    span{
      vertical-align: middle;
    }
    i{
      vertical-align: middle;
      margin-left: 20px;
      float: right;
    }
  }
  .submenu-bar-dropdown{
    position: absolute;
    background-color: white;
    z-index: 1;
    top: 45px;
    box-shadow: 1px 3px 10px #bababa;
    width: 200px;
    .submenu-item{
      //padding: 5px 10px;
      span{
        padding: 10px;
        display: block;
      }
      .divider{
        border-bottom: 1px solid lightgray;
      }
    }
  }
}

@mixin square($size){
  width: $size;
  height: $size;
  //border:1px solid red;
}

@mixin circle($size){
  width: $size;
  height: $size;
  border-radius:$size / 2;
}

@mixin arrow-right($size, $color) {
  content: " ";
  position: absolute;
  top:50%;
  left:100%;
  margin-top: -#{$size};
  border-width: $size;
  border-style: solid;
  border-color: transparent transparent transparent $color;
}

@mixin arrow-left($size, $color) {
  content: " ";
  position: absolute;
  top: 50%;
  right: 100%;
  margin-top: -#{$size};
  border-width: $size;
  border-style: solid;
  border-color: transparent $color transparent transparent;
}

@mixin arrow-down($size, $color, $position) {
  content: " ";
  position: absolute;
  bottom: -#{$size * 2};
  left: $position;
  margin-top: -#{$size};
  border-width: $size;
  border-style: solid;
  border-color: $color transparent transparent transparent;
}

@mixin arrow-down-tilted($size, $color, $position) {
  content: " ";
  position: absolute;
  bottom: -#{$size * 2};
  left: $position;
  margin-top: -#{$size};
  border-width: $size;
  border-style: solid;
  border-color: $color transparent transparent $color;
}

@mixin arrow-up($size, $color, $position) {
  content: " ";
  position: absolute;
  top: -#{$size};
  left: $position;
  margin-top: -#{$size};
  border-width: $size;
  border-style: solid;
  border-color: transparent transparent $color transparent;
}

@mixin container-size($size) {
  width: $size;
  margin-left: auto;
  margin-right: auto;
}

@mixin center-content($top, $left) {
  margin: 0;
  position: absolute;
  top: $top;
  left:$left;
  transform: translate(-#{$left}, -#{$top});
}

@mixin bg-linear-grad-to-top($start-color, $end-color) {
  background: rgba(0,0,0,0.55); /* For browsers that do not support gradients */
  background: -webkit-linear-gradient(bottom,$start-color, $end-color); /*Safari 5.1-6*/
  background: -o-linear-gradient(top,$start-color, $end-color); /*Opera 11.1-12*/
  background: -moz-linear-gradient(top,$start-color, $end-color); /*Fx 3.6-15*/
  background: linear-gradient(to top, $start-color, $end-color); /*Standard*/
}

@mixin bg-linear-grad-to-bottom($start-color, $end-color) {
  background: rgba(0,0,0,0.55); /* For browsers that do not support gradients */
  background: -webkit-linear-gradient(top,$start-color, $end-color); /*Safari 5.1-6*/
  background: -o-linear-gradient(bottom,$start-color, $end-color); /*Opera 11.1-12*/
  background: -moz-linear-gradient(bottom,$start-color, $end-color); /*Fx 3.6-15*/
  background: linear-gradient(to bottom, $start-color, $end-color); /*Standard*/
}

@mixin capsule-button($padding-horizontal, $padding-vertical) {
  padding: $padding-vertical $padding-horizontal;
  border: 1px solid white;
  border-radius: $padding-vertical/2 + 15px;
  background-color: transparent;
  color: white;
  display: inline-block;
}

@mixin capsule-form($width, $height) {
  width: $width;
  padding: $height 0;
  border: 1px solid white;
  border-radius: $height * 2;
}

// ---------- Standard card layout---------- //
@mixin standard-card($padding, $text-align) {
  text-align: $text-align;
  background-size: cover;
  color: white;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.25);

  .content {
    position: absolute;
    left: 0;
    padding: $padding;

    h2{
      font-size: $font-size-h2;
      padding: 25px 0;
      margin: 0;
    }
    & >p{
      font-size: $font-size-default;
      text-align: justify;
      margin-top: 25px !important;
      opacity: 0;
      transition: opacity 0.3s ease, margin 0.5s ease;
    }
    >a{
      @include capsule-button(40px, 12px);
      text-decoration: none;
      margin-top: 35px;
      opacity: 0;
      transition: opacity 0.3s ease, margin 0.5s ease;
    }
  }
  &:hover{
    .content {
      & >p{
        opacity: 1;
        margin-top: 0 !important;
      }
      >a{
        opacity: 1;
        margin-top: 10px !important;
      }
    }
  }
}

// ---------- Video card layout---------- //
@mixin video-card {
  width: 100%;
  height: 100%;

  .text {
    position: absolute;
    bottom:0;
    height: 30%;
    width: 100%;
    color: white;
    background-color: rgba(0,0,0,0.25);
    padding: 10px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    overflow: hidden;

    h2{
      font-size: $font-size-h2;
      margin: 0;
    }
    p{
      font-weight: 300;
      margin-top: 10px;
    }
  }

  video {
    min-width: 100%;
    min-height: 100%;
    max-width: 100%;
    max-height: 100%;
    object-fit: fill;
  }
  .video-controller {
    position: absolute;
    @include center-content(50%, 50%);
    i {
      font-size: $font-size-extraLarge;
      cursor: pointer;
      color: #242942;
      transition: opacity 0.5s ease;
    }
  }
}

@mixin center-vertically($position){
  top: $position;
  transform: translateY(-$position);
  position: absolute;
}

@mixin divider($width, $height){
  width: $width;
  height: $height;
  border-bottom: 1px solid lightgrey;
}

@mixin standard-grid($col_gap){
  & {
    .row{
    }
    .o-half, .o-third, .o-fourth{
      display: inline-block;
      float: left;
    }
    .o-whole{
      width: 100%;
    }
    .o-half{
      width: (100% - $col_gap*2) / 2;
      margin-left: $col_gap / 2;
      margin-right: $col_gap / 2;
    }
    .o-third{
      width: (100% - $col_gap*2) / 3;
      margin-left: $col_gap / 3;
      margin-right: $col_gap / 3;
    }
    .o-fourth{
      width: (100% - $col_gap*2) / 4;
      margin-left: $col_gap / 3;
      margin-right: $col_gap / 4;
    }
  }
}

@mixin standard-button($padding){
  padding: $padding;
  background-color: $bg-color-primary;
  color: white;
  border-radius: 5px;
  border: 0;
}

